--- a/CARPETA DEFINITIVA/index.html/consultas.html
+++ b/CARPETA DEFINITIVA/index.html/consultas.html
@@ -23,7 +23,7 @@
         <section class="consulta-section">
             <div class="consulta-form-container">
                 <h2>Formulario de Consulta</h2>
-                <form action="#" method="post">
+                <form action="../" method="post">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
 
